--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     font-size: 24px;
 }
 .titulo{
-    color: blueviolet;
+    color: rgb(138, 43, 226);
     font-size: 32px;
     font-family: Big Shoulders Stencil;
 }
