--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     text-align: center;
 }
 .texto{
-    background-color: aqua;
+    background-color:chartreuse;
 }
 .h2{
     font-family: Big Shoulders Stencil;
