--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@
 .foto{
         width: 33%;
 }
-.topios{
+.topicos{
     text-decoration: none;
+    list-style-type: none;
+    display: flex;
 }
