--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     text-decoration: none;
 }
 .titulo{
-    color: #4d543d;
+    color: #323497;
     font-size: 32px;
     font-family:Emblema One;
     text-align: center;
