--- a/style.css
+++ b/style.css
@@ -63,3 +63,12 @@
 .li{
     text-decoration: none;
 }
+.botao-link{
+    text-decoration: none;
+    display: flex;
+    color:#e8fbbb;
+    font-size: 24px;
+    padding-left: 2em;
+    padding-right: 2em;
+    background-color: #4d543d;
+}
