--- a/style.css
+++ b/style.css
@@ -66,9 +66,9 @@
 .botao-link{
     text-decoration: none;
     display: flex;
-    color:#e8fbbb;
+    color:#d2e4a7;
     font-size: 24px;
     padding-left: 2em;
     padding-right: 2em;
-    background-color: #4d543d;
+    background-color: #92a070;
 }
