--- a/style.css
+++ b/style.css
@@ -70,5 +70,5 @@
     font-size: 24px;
     padding-left: 2em;
     padding-right: 2em;
-    background-color: #92a070;
+    background-color: #68a4ff;
 }
