--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@
 .botao-link{
     text-decoration: none;
     display: flex;
-    color:#e8fbbb;
+    color:#4ca9aa;
     font-size: 24px;
     padding-left: 2em;
     padding-right: 2em;
