--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil:opsz,wght@10..72,100..900&display=swap');
 .cabecalho{
-    background-color: #FFFF;
+    background-color: #8bc3ea;
     width: 100%;
 }
 .cabecalho{
